# eco_simulator

./: CONTEXT_OVERVIEW.md  Dockerfile  README.md  app.py  ml_predictor.py  pyproject.toml  report_engine.py  report_engine_agents.py  requirements.txt  sensitivity_engine.py
HANDBUCH/: Dual Layer Architecture for Data Driven Ecology.docx  ~$al Layer Architecture for Data Driven Ecology.docx
agent_ecosystem/: agent.py  config.py  environment.py  simulator.py
assets/: style.css
predator_prey_sim/: config.py  integrators.py  simulator.py  visualizer.py
sensitivity_report/: style.css
sensitivity_results/: results_0.02_0.005_0.1.csv  results_0.03_0.007_0.15.csv  results_0.04_0.006_0.25.csv  results_0.05_0.009_0.2.csv  results_alpha_0.18_beta_0.015_curiosity_0.5_mutation_rate_0.03_phi_0.005.csv  results_alpha_0.22_beta_0.018_curiosity_0.6_mutation_rate_0.04_phi_0.006.csv  results_alpha_0.25_beta_0.02_curiosity_0.4_mutation_rate_0.05_phi_0.005.csv  results_alpha_0.3_beta_0.022_curiosity_0.7_mutation_rate_0.06_phi_0.007.csv
templates/: report_template.html
tests/: test_simulator.py
tools/: README.md  analyze_results.py  control_dashboard.py  full_analysis.py  plot_results.py  recommend_params.py  run_sensitivity.py
