[tool.poetry]
name = "eco_simulator"
version = "2.0.0"
description = "Live-Simulator für ein Ökosystem mit Sensitivitätsanalyse und KI-Agenten"
authors = ["Du <du@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "*"
numpy = "*"
plotly = "*"
matplotlib = "*"
scipy = "*"
pandas = "*"
jinja2 = "*"
weasyprint = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
